[package]
name = "diskordbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.42"
chrono = "0.4.19"
futures = "0.3.15"
image = "0.23.14"
serenity = {version="*",  default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
panic = 'abort'

